[tool.poetry]
name = "workout-tracking"
version = "0.1.0"
description = "Extracts workout data from a user-entered English description and saves the performance to a Google Spreadsheet."
authors = ["Igor Ferreira <iferreira.n01@gmail.com>"]
readme = "README.md"
packages = [{include = "workout_tracking"}]

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^1.10.2"
python-dotenv = "^0.21.0"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
